[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/menus/ingame/pause_menu.gd" type="Script" id=1]
[ext_resource path="res://ui/menus/menus.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/menus/pages/menu_confirm.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/menus/ingame/ingame_main_menu.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/menus/ingame/ingame_menus.gd" type="Script" id=5]
[ext_resource path="res://ui/menus/pages/menu_restart.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.862745 )

[node name="PauseMenu" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 4 )
script = ExtResource( 1 )

[node name="Menus" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1920.0
margin_bottom = 1080.0
script = ExtResource( 5 )

[node name="MenuGameplayOptions" parent="Menus" index="1"]
custom_constants/separation = 50

[node name="Options" parent="Menus/MenuGameplayOptions" index="0"]
margin_top = 196.0
margin_bottom = 769.0

[node name="Column1" parent="Menus/MenuGameplayOptions/Options" index="0"]
margin_left = 80.0
margin_right = 989.0
margin_bottom = 573.0

[node name="GameplayContainer" parent="Menus/MenuGameplayOptions/Options/Column1" index="0"]
margin_bottom = 573.0

[node name="KeepLockButton" parent="Menus/MenuGameplayOptions/Options/Column1/GameplayContainer/VBoxContainer" index="5"]
focus_neighbour_bottom = NodePath("../../../../../BackButton")

[node name="Column2" parent="Menus/MenuGameplayOptions/Options" index="1"]
margin_left = 1039.0
margin_right = 1840.0
margin_bottom = 573.0

[node name="AccessibilityContainer" parent="Menus/MenuGameplayOptions/Options/Column2" index="0"]
margin_right = 801.0
margin_bottom = 573.0

[node name="AccessibilityLabel" parent="Menus/MenuGameplayOptions/Options/Column2/AccessibilityContainer" index="0"]
margin_right = 801.0

[node name="VBoxContainer" parent="Menus/MenuGameplayOptions/Options/Column2/AccessibilityContainer" index="1"]
margin_right = 801.0
margin_bottom = 123.0

[node name="EnemyHealthSlider" parent="Menus/MenuGameplayOptions/Options/Column2/AccessibilityContainer/VBoxContainer" index="0"]
visible = false

[node name="EnemyDamageSlider" parent="Menus/MenuGameplayOptions/Options/Column2/AccessibilityContainer/VBoxContainer" index="1"]
visible = false
margin_top = 0.0
margin_bottom = 45.0

[node name="EnemySpeedSlider" parent="Menus/MenuGameplayOptions/Options/Column2/AccessibilityContainer/VBoxContainer" index="2"]
visible = false
margin_top = 0.0
margin_bottom = 45.0

[node name="FontSizeSlider" parent="Menus/MenuGameplayOptions/Options/Column2/AccessibilityContainer/VBoxContainer" index="3"]
margin_top = 0.0
margin_right = 801.0
margin_bottom = 45.0

[node name="Control" parent="Menus/MenuGameplayOptions/Options/Column2/AccessibilityContainer/VBoxContainer/FontSizeSlider" index="1"]
margin_right = 416.0

[node name="HSlider" parent="Menus/MenuGameplayOptions/Options/Column2/AccessibilityContainer/VBoxContainer/FontSizeSlider" index="2"]
margin_left = 466.0
margin_right = 666.0
focus_neighbour_top = NodePath("../../../../../../BackButton")

[node name="Value" parent="Menus/MenuGameplayOptions/Options/Column2/AccessibilityContainer/VBoxContainer/FontSizeSlider" index="3"]
margin_left = 716.0
margin_right = 801.0

[node name="CharacterHighlightingButton" parent="Menus/MenuGameplayOptions/Options/Column2/AccessibilityContainer" index="2"]
margin_top = 128.0
margin_right = 801.0
margin_bottom = 198.0

[node name="WeaponHighlightingButton" parent="Menus/MenuGameplayOptions/Options/Column2/AccessibilityContainer" index="3"]
margin_top = 203.0
margin_right = 801.0
margin_bottom = 273.0

[node name="ExplosionsButton" parent="Menus/MenuGameplayOptions/Options/Column2/AccessibilityContainer" index="4"]
margin_top = 278.0
margin_right = 801.0
margin_bottom = 348.0

[node name="GoldSoundsButton" parent="Menus/MenuGameplayOptions/Options/Column2/AccessibilityContainer" index="5"]
margin_top = 353.0
margin_right = 801.0
margin_bottom = 423.0

[node name="DarkenScreenButton" parent="Menus/MenuGameplayOptions/Options/Column2/AccessibilityContainer" index="6"]
margin_top = 428.0
margin_right = 801.0
margin_bottom = 498.0

[node name="ProjectileHighlightingButton" parent="Menus/MenuGameplayOptions/Options/Column2/AccessibilityContainer" index="7"]
margin_top = 503.0
margin_right = 801.0
margin_bottom = 573.0

[node name="DefaultButton" parent="Menus/MenuGameplayOptions" index="1"]
visible = false
margin_top = 761.0
margin_bottom = 826.0

[node name="BackButton" parent="Menus/MenuGameplayOptions" index="2"]
margin_top = 819.0
margin_bottom = 884.0

[node name="MainMenu" parent="Menus" instance=ExtResource( 4 )]

[node name="MenuConfirm" parent="Menus" instance=ExtResource( 3 )]
visible = false

[node name="MenuRestart" parent="Menus" instance=ExtResource( 6 )]
visible = false

[editable path="Menus"]
[editable path="Menus/MenuGameplayOptions"]
[editable path="Menus/MenuGameplayOptions/Options/Column2/AccessibilityContainer/VBoxContainer/EnemyHealthSlider"]
[editable path="Menus/MenuGameplayOptions/Options/Column2/AccessibilityContainer/VBoxContainer/EnemyDamageSlider"]
[editable path="Menus/MenuGameplayOptions/Options/Column2/AccessibilityContainer/VBoxContainer/EnemySpeedSlider"]
[editable path="Menus/MenuGameplayOptions/Options/Column2/AccessibilityContainer/VBoxContainer/FontSizeSlider"]
